--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -29,7 +29,7 @@
     </div>
 
     <footer>
-        <p th:each="topic: ${games.topics}"><a th:href="@{/topics(id=${topic.id})}" th:text="${topic.name}"></a></p>
+        <p th:each="topic: ${game.topics}"><a th:href="@{/topics(id=${topic.id})}" th:text="${topic.name}"></a></p>
         <p><a href="/topics"> Back to topics</a></p>
         <p><a href="/all-games">Back to Main Menu</a></p>
         <small>&copy WCCI Kelley Landis 2019</small>
